# Xinshuo_PyToolbox

./: .gitignore  .gitmodules  README.md  TODO.txt  coco_mask.lua  compute_IOU.m  convert_frame.m  convert_to_eps.m  crop_center.m  crop_frame.m  generate_video.m  heatmap2mask.m  install.sh  myheader.h  prec_rec.m  requirements.txt  resize_frame.m  roirotate.m
algorithm/: dijkstra.m
algorithms/: dijkstra.m
basic_geometry/: find_edge_polygon.m  intersections.m  point_in_convexpolygon.m  point_in_edge.m  point_inside_3d_triangle_test.m  test_point_inside_3d_triangle_test.m  test_point_triangle.m  warpH.m
computer_vision/: __init__.py  nms.m
computer_vision/bbox_transform/: __init__.py  __init__paths__.py  bbox_pts2image_pts.m  bbox_transform.py  bboxcheck_TLBR.m  bboxcheck_TLWH.m  clip_bboxes_TLWH.m
computer_vision/box_transform/: RectLTRB2LTWH.m  RectLTWH2LTRB.m  bbox_transform.py  boxcheck_LTRB.m  boxcheck_LTWH.m  boxcheck_score.m  boxcheck_sortedscore.m  boxoverlap.m  clip_boxes.m  remove_small_boxes.m  suppress_boxes_multiple_images.m  suppress_boxes_single_image.m
computer_vision/evaluation/: __init__.py  (+3 more)
computer_vision/geometry/project_camera2camera/: CMakeLists.txt  main.cpp
data/: __init__.py  __init__paths__.py  generate_data.py  generate_hdf5.m  normalize_labels.m  preprocess.py  preprocess_image_caffe.m  synthetic_data.py  unnormalize_labels.m
epipolar_geometry/: eightpoint.m
file_io/: IdDataParser.cpp  IdDataParser.h  __init__.py  __init__paths__.py  camera_io.cpp  camera_io.h  convert_to_eps.m  file_io.py  generate_list.lua  getPointFromImage.m  get_image_list_from_cur_folder.m  get_image_list_from_folder.m  get_subfolder_list.m  glob.m  io_point.cpp  io_point.h  linecount_file.m  load_image_list_from_file.m  load_list_from_cur_folder.m  load_list_from_folder.m  mkdir_if_missing.m  parse_matrix_file.m  parse_text_file.m  save_figure.m  save_matrix2d_to_file.m  save_struct.m  save_text_file.m  test.txt  test_convert_to_eps.m  test_get_subfolder_list.m  testgetpoint.m
images/: __init__.py  crop_center.m  find_correspondence_pts_transformation.m  find_peaks.m  generate_heatmap_from_location.m  get_point.m  get_pts_from_image.m  image_processing.py  imagecoor2cartesian.m  mat2im.m  pad_around.m  resize_frame.m  resize_images.m  resize_pts2image_pts.m  rotate_images.m  rotate_with_padding.m  save_image.py  showboxes.m  subsample_images.m  visualize_pts_folder.m  visualize_pts_single_file.m  visualize_save.py  weighted_centroid.m
io/: getPointFromImage.m
kmeans_meanshift_normalizedcut/: Nc.m
math/: __init__.py  __init__paths__.py  fit_2d_gaussian.m  get_angle_from_pts.m  get_slope.m  math_function.py  math_functions.cpp  math_functions.h  math_functions.py  pts_euclidean.m
matlab/: file_abspath.m  get_fileID_for_loading.m  get_fileID_for_saving.m  get_fileID_from_path.m  import_pymodule.m  init_var.m  isImageorPath.m  isInteger.m  isNonNegativeInteger.m  isPositiveInteger.m  isimage.m  number2onehot.m  remove_empty_cell.m  remove_list_from_list.m  remove_str_from_str.m  suppress_caffe_terminal_log.m
miscellaneous/: __init__.py  __init__paths__.py  active_caffe_mex.m  auto_select_gpu.m  clean_image.sh  counter.py  debug_tool.cpp  debug_tool.h  get_normalize_para.m  get_timestamp.m  logger.py  process_id.m  remove_empty_cell.m  seed_rand.m  test_type_conversion.cpp  tic_toc_print.m  timer.py  type_conversion.cpp  type_conversion.h
neural_network/: Backward.m  Forward.m  InitializeNetwork.m  Train.m  UpdateParameters.m  mysigmoid.m
python/: __init__.py  __init__paths__.py  _init_paths.py  check.py  configuration.py  conversions.py  plot.py  type_check.py
python_util/: save_image.py
videos/: concatenate_video_grid.m  convert_frame.m  crop_frame.m  extract_frame.m  generate_images_from_video.m  generate_video.m  generate_video_from_folder.m  generate_video_from_list.m
visualization/: __init__.py  __init__paths__.py  caffe_blob_visualization.m  mesh_visualization.cpp  mesh_visualization.h  showboxes.m  tight_subplot.m  visualize.py  visualize_covariance_ellipse.m  visualize_error_ellipse1.m  visualize_heatmap.m  visualize_image_with_pts.m  visualize_image_with_pts_customized.m  visualize_image_with_pts_from_file.m  visualize_pts_single_file.m  visualize_segment.m
xinshuo_data/: __init__.py  generate_data.py  normalize_labels.m  preprocess.py  unnormalize_labels.m
xinshuo_images/: __init__.py  crop_interp.m  find_correspondence_pts_transformation.m  image_processing.py
xinshuo_io/: __init__.py  file_io.py  generate_list.lua  images_io.py  io_point.cpp  parse_text_file.m  save_matrix2d_to_file.m
xinshuo_learning/: myrelu.m  myreluprime.m  mysigmoidprime.m  mysoftmax.m  mytanh.m  mytanhprime.m
xinshuo_math/: __init__.py  bbox_transform.py  distance_pts.m  find_closest_mean_from_array.m  generate_weight.m  get_2dline_from_segment.m  get_3dplane_from_pts.m  get_angle_from_pts.m  get_distance_from_pts_2dline.m  math_functions.cpp  math_functions.h  math_functions.py  matrix_bmm.m  matrix_inverse_batch.m  private.py  pts_distance.m  pts_transform.py
xinshuo_matlab/: __init__.py  active_caffe_mex.m
xinshuo_miscellaneous/: __init__.py  auto_select_gpu.m  conversion.py  conversions.py  convert_secs2time.m  counter.py  debug_tool.cpp  logger (xinshuo's conflicted copy 2017-10-26).py  logger.py  parallel.cpp  type_check.py  type_conversion.cpp
xinshuo_python/: __init__.py  check (xinshuo's conflicted copy 2017-10-26).py  check.py  configuration.py
xinshuo_video/: __init__.py  video_processing.py
xinshuo_videos/: __init__.py  concatenate_video_grid.m  generate_video_from_folder.m  video_processing.py
xinshuo_vision/: __init__.py  compose_projection.m  optical_flow.py
xinshuo_vision/cplusplus/obj2ply/: CMakeLists.txt
xinshuo_vision/cplusplus/ply2obj/: CMakeLists.txt
xinshuo_vision/geometry/obj2ply/: CMakeLists.txt
xinshuo_visualization/: __init__.py  geometry_vis.py  image_vis.py  mesh_visualization.cpp  prob_stat_vis.py  visualize.py  visualize_image_with_pts (xinshuo's conflicted copy 2017-10-26).m  visualize_image_with_pts.m
(+474 files in other folders)
